--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -99,3 +99,37 @@
     color: #fff;
     
     }
+
+    .features {
+        ul {
+          margin-left: 0;
+          padding-left: 15px;
+        }
+      }
+      
+      .jumbotron {
+        text-align: center;
+        background-image: asset-url('phone.jpg');
+        background-size: cover;
+        color: #fff;
+        font-family: 'Helvetica Neue' !important;
+        font-stretch: expanded;
+        padding-top: 50px;
+        padding-bottom: 125px;
+        margin-left: 15px;
+        margin-right: 15px;
+        text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+      
+      }
+      
+      .no-left-padding {
+        padding-left: 0 !important;
+      }
+      
+      .listing {
+        list-style: none;
+        padding-left: 0;
+      }
+
+      
+      
